improved password validation and created patch method to change password
