# app/routes.php
@@ -14,7 +14,11 @@ use App\Application\Actions\Tab;
 
 return function (App $app) {
     $app->get('/', function (Request $request, Response $response) {
-        $response->getBody()->write('Hello world!');
+        $response->getBody()->write('JIRA Checklist API!');
+        return $response;
+    });
+
+    $app->options('/{routes:.*}', function (Request $request, Response $response) {
         return $response;
     });
 
@@ -25,6 +29,7 @@ return function (App $app) {
             $group->post('', User\CreateUserAction::class);
             $group->post('/login', User\LoginUserAction::class);
             $group->put('/{id}', User\UpdateUserAction::class);
+            $group->patch('/password/{id}', User\UpdateUserPasswordAction::class);
             $group->delete('/{id}', User\DeleteUserAction::class);
         });
 
@@ -65,40 +70,4 @@ return function (App $app) {
             $group->get('/{id}', ItemStatus\GetItemStatusAction::class);
         });
     });
-
-    /*
-    $app->group('/users', function () use ($app): void {
-        $app->get('', User\GetAll::class)->add(new Auth());
-        $app->post('', User\Create::class);
-        $app->get('/{id}', User\GetOne::class)->add(new Auth());
-        $app->put('/{id}', User\Update::class)->add(new Auth());
-        $app->delete('/{id}', User\Delete::class)->add(new Auth());
-    });
-
-    $app->options('/{routes:.*}', function (Request $request, Response $response) {
-        // CORS Pre-Flight OPTIONS Request Handler
-        return $response;
-    });
-
-    $app->get('/', function (Request $request, Response $response) {
-        $response->getBody()->write('Hello world!');
-        return $response;
-    });
-
-
-    $app->group('/users', function (Group $group) {
-        $group->get('', ListUsersAction::class);
-        $group->get('/{id}', GetUserAction::class);
-    });
-
-    $app->get('/statuses', function (Request $request, Response $response) {
-        $db = $this->get(PDO::class);
-        $sth = $db->prepare("SELECT * FROM item_statuses");
-        $sth->execute();
-        $data = $sth->fetchAll(PDO::FETCH_ASSOC);
-        $payload = json_encode($data);
-        $response->getBody()->write($payload);
-        return $response->withHeader('Content-Type', 'application/json');
-    });
-    */
 };
